# src/rest/routes/launch.rs
@@ -804,6 +804,7 @@ mod tests {
             external_id: None,
             external_url: None,
             external_provider: None,
+            collection: None,
         }
     }
 
